2008-06-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/files.c (tracker_metadata_get_embedded):
	Check ontology to see whether the file could contain embedded
	metadata.
	(check_exclude_file) (tracker_module_get_file_metadata): Check whether
	the file should be excluded for any kind of data extraction.

2008-06-04  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-interface-sqlite.c
	(tracker_db_interface_sqlite_execute_procedure)
	(tracker_db_interface_sqlite_execute_procedure_len): Do not choke with
	NULL arguments, instead trust the caller on the number of arguments
	passed and allow passing NULL values to these functions.

2008-06-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-type-utils.h: Fixed glib include
	build warning.
	
	* src/libtracker-db/tracker-db-manager.[ch]: 
	* src/tracker-indexer/tracker-indexer-db.[ch]:
	* src/tracker-indexer/tracker-indexer.c:
	* src/tracker-indexer/tracker-main.c:  Added functions from
	tracker-indexer/tracker-indexer-db.c[ch] which set up databases.
	So now when we request a database type like the common database or
	the file metadata database, we return an interface and it is
	already set up if it had to be created first, etc.
	
	* src/trackerd/tracker-db-sqlite.c: 
	* src/trackerd/tracker-indexer.c: Changed the TrackerDB type names
	for metadata from "META" to "METADATA".

2008-06-03  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-db-sqlite.h:
	* src/trackerd/tracker-rdf-query.c: Cleaned up some uses of
	FieldData and changed them to TrackerFieldData instead.

2008-06-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-file-utils.c:
	* src/libtracker-common/tracker-os-dependant-unix.c:
	* src/libtracker-common/tracker-os-dependant-win.c:
	* src/libtracker-common/tracker-os-dependant.h:
	* src/trackerd/tracker-process-files.c: Removed
	tracker_check_uri(), it is hardly used and it is only a pointer
	check.
